Fixed init and launch issues

--- a/app/templates/auth/error.html
+++ b/app/templates/auth/error.html
@@ -1,6 +1,6 @@
 {% extends "web/base.html" %}
 
-{% block title %}Authentication Error - {{ app_name }}{% endblock %}
+{% block title %}Authentication Error - Epic HL7 Integration{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
@@ -45,11 +45,6 @@
                                 <a href="{{ url_for('web.index') }}" class="btn btn-outline-secondary">
                                     <i class="fas fa-home me-1"></i>
                                     Go Home
-                                </a>
-                                
-                                <a href="{{ url_for('web.help_page') }}" class="btn btn-outline-info">
-                                    <i class="fas fa-question-circle me-1"></i>
-                                    Get Help
                                 </a>
                             </div>
                         </div>
